--- a/app/components/people/people.profile.html
+++ b/app/components/people/people.profile.html
@@ -25,40 +25,41 @@
 
                         <div class="row" style="padding-bottom: 15px;">
                             <div class="col-xs-3 col-sm-3 no-overflow"
-                                 ng-if="profile.activity.leader">
+                                 ng-if="profile.user.roles.leader">
                                 <p class="profile-label font-uppercase" style="font-size: 14px;">Leader:</p>
                                 <ul style="padding-left: 0; margin-left: -5px; margin-top: -8px;">
-                                    <li ng-repeat="item in profile.activity.leader" style="list-style: none; display: inline; float: left; padding-left: 5px; padding-top: 3px;">
+                                    <li ng-repeat="(key, val) in profile.user.roles.leader" style="list-style: none; display: inline; float: left; padding-left: 5px; padding-top: 3px;">
 
-                                        <a href="{{'/' + item}}" class="btn btn-xs btn-outline" ng-class="{'btn-danger' : item.type == 'startup', 'btn-info' : item.type == 'network', 'btn-primary' : item.type == 'industry', 'btn-success' : item.type == 'location'}"><i class="fa {{item.profile.icon}}"></i> {{item.profile.name}}</a>
+                                        <a href="{{'/' + key}}" class="btn btn-xs btn-outline" ng-class="{'btn-danger' : profile.communities[key].type == 'startup', 'btn-info' : profile.communities[key].type == 'network', 'btn-primary' : profile.communities[key].type == 'industry', 'btn-success' : profile.communities[key].type == 'location'}"><i class="fa {{profile.communities[key].profile.icon}}"></i> {{profile.communities[key].profile.name}}</a>
                                     </li>
                                 </ul>
                             </div>
                             <div class="col-xs-3 col-sm-3 no-overflow"
-                                 ng-if="profile.activity.founder">
+                                 ng-if="profile.user.roles.founder">
                                 <p class="profile-label font-uppercase" style="font-size: 14px;">Founder:</p>
                                 <ul style="padding-left: 0; margin-left: -5px; margin-top: -8px;">
-                                    <li ng-repeat="item in profile.activity.founder"
+                                    <li ng-repeat="(key, val) in profile.user.roles.founder"
                                         style="list-style: none; display: inline; float: left; padding-left: 5px; padding-top: 3px;">
-                                        <a href="{{'/' + item.object}}" class="btn btn-xs btn-outline" ng-class="{'btn-danger' : item.type == 'startup', 'btn-info' : item.type == 'network', 'btn-primary' : item.type == 'industry', 'btn-success' : item.type == 'location'}"><i class="fa {{item.profile.icon}}"></i> {{item.profile.name}}</a>
+                                        <a href="{{'/' + key}}" class="btn btn-xs btn-outline" ng-class="{'btn-danger' : profile.communities[key].type == 'startup', 'btn-info' : profile.communities[key].type == 'network', 'btn-primary' : profile.communities[key].type == 'industry', 'btn-success' : profile.communities[key].type == 'location'}"><i class="fa {{profile.communities[key].profile.icon}}"></i> {{profile.communities[key].profile.name}}</a>
                                     </li>
                                 </ul>
                             </div>
                             <div class="col-xs-3 col-sm-3 no-overflow"
-                                 ng-if="profile.activity.investor">
+                                 ng-if="profile.user.roles.investor">
                                 <p class="profile-label font-uppercase" style="font-size: 14px;">Investor:</p>
                                 <ul style="padding-left: 0; margin-left: -5px; margin-top: -8px;">
-                                    <li ng-repeat="item in profile.activity.investor" style="list-style: none; display: inline; float: left; padding-left: 5px; padding-top: 3px;">
-                                        <a href="{{'/' + item.object}}" class="btn btn-xs btn-outline" ng-class="{'btn-danger' : item.type == 'startup', 'btn-info' : item.type == 'network', 'btn-primary' : item.type == 'industry', 'btn-success' : item.type == 'location'}"><i class="fa {{item.profile.icon}}"></i> {{item.profile.name}}</a>
+                                    <li ng-repeat="(key, val) in profile.user.roles.investor" style="list-style: none; display: inline; float: left; padding-left: 5px; padding-top: 3px;">
+                                        <a href="{{'/' + key}" class="btn btn-xs btn-outline" ng-class="{'btn-danger' : profile.communities[key].type == 'startup', 'btn-info' : profile.communities[key].type == 'network', 'btn-primary' : profile.communities[key].type == 'industry', 'btn-success' : profile.communities[key].type == 'location'}"><i class="fa {{profile.communities[key].profile.icon}}"></i> {{profile.communities[key].profile.name}}</a>
                                     </li>
                                 </ul>
                             </div>
-                            <div class="col-xs-3 col-sm-3 no-overflow" ng-if="profile.activity.advisor">
+                            <div class="col-xs-3 col-sm-3 no-overflow" ng-if="profile.user.roles.advisor">
                                 <p class="profile-label font-uppercase" style="font-size: 14px;">Advisor:</p>
                                 <ul style="padding-left: 0; margin-left: -5px; margin-top: -8px;">
-                                    <li ng-repeat="item in profile.activity.advisor"
-                                        style="list-style: none; display: inline; float: left; padding-left: 5px; padding-top: 3px;">
-                                        <a href="{{'/' + item.object}}" class="btn btn-xs btn-outline" ng-class="{'btn-danger' : item.type == 'startup', 'btn-info' : item.type == 'network', 'btn-primary' : item.type == 'industry', 'btn-success' : item.type == 'location'}"><i class="fa {{item.profile.icon}}"></i> {{item.profile.name}}</a>
+                                    <li ng-repeat="(key, val) in profile.user.roles.advisor"
+                                        style="list-style: none; display: inline; float: left; padding-left: 5px;
+                                        padding-top: 3px;">
+                                        <a href="{{'/' + key}}" class="btn btn-xs btn-outline" ng-class="{'btn-danger' : profile.communities[key].type == 'startup', 'btn-info' : profile.communities[key].type == 'network', 'btn-primary' : profile.communities[key].type == 'industry', 'btn-success' : profile.communities[key].type == 'location'}"><i class="fa {{profile.communities[key].profile.icon}}"></i> {{profile.communities[key].profile.name}}</a>
                                     </li>
                                 </ul>
                             </div>
